--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<base href="/">
 
 	<link rel="stylesheet" type="text/css" href="assets/dist/vendor-975ea8ccee.css">
-	<link rel="stylesheet" type="text/css" href="assets/dist/style-4c17402fd4.css">
+	<link rel="stylesheet" type="text/css" href="assets/dist/style-fa8da3ca45.css">
 	<base href="/"></base>
 
 	<style>
@@ -48,11 +48,11 @@ ng\:form {
 				</div>
 			</div>	
 		</section>
-   <div ui-view style="height: 100%"></div>
+   <div ui-view style="height: 100%" autoscroll="false"></div>
 	<script type="text/javascript" src="assets/js/configParams.js"></script>
 	<script type="text/javascript" src="assets/dist/vendor-f1fac7d118.js"></script>
 	<script type="text/javascript" src="bower_components/angular-google-plus/dist/angular-google-plus.js"></script>
-	<script type="text/javascript" src="assets/dist/templates-b760301e10.js"></script>
+	<script type="text/javascript" src="assets/dist/templates-3b3dce2efc.js"></script>
      <script>
 
      var npwmApp = angular.module('npwmApp', [
@@ -60,6 +60,8 @@ ng\:form {
      	'ui.router.router',
      	'ui.bootstrap',
      	'templates',
+     	'angular-loading-bar',
+     	// 'simplePagination'
      	]);
      function bootstrapApplication(){
      	angular.element(document).ready(function() {
@@ -68,8 +70,8 @@ ng\:form {
      }
      bootstrapApplication();
      </script>
-     <script type="text/javascript" src="assets/dist/app-aa8489d86f.js"></script>
-     <script type="text/javascript" src="assets/dist/combined-cefcc2d0f7.js"></script>
+     <script type="text/javascript" src="assets/dist/app-75e00ad4c1.js"></script>
+     <script type="text/javascript" src="assets/dist/combined-7df98be03c.js"></script>
      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.1/angular-sanitize.min.js"></script>
  </body>
  </html>
