--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@ ng\:form {
 		</section>
    <div ui-view style="height: 100%" autoscroll="false"></div>
 	<script type="text/javascript" src="assets/js/configParams.js"></script>
+	<script src="http://maps.google.com/maps/api/js"></script>
 	<script type="text/javascript" src="assets/dist/vendor-f1fac7d118.js"></script>
-	<script type="text/javascript" src="bower_components/angular-google-plus/dist/angular-google-plus.js"></script>
-	<script type="text/javascript" src="assets/dist/templates-3b3dce2efc.js"></script>
+	<script type="text/javascript" src="assets/dist/templates-04d8fee4f0.js"></script>
      <script>
 
      var npwmApp = angular.module('npwmApp', [
@@ -61,7 +61,7 @@ ng\:form {
      	'ui.bootstrap',
      	'templates',
      	'angular-loading-bar',
-     	// 'simplePagination'
+     	'ngMap'
      	]);
      function bootstrapApplication(){
      	angular.element(document).ready(function() {
@@ -71,7 +71,7 @@ ng\:form {
      bootstrapApplication();
      </script>
      <script type="text/javascript" src="assets/dist/app-75e00ad4c1.js"></script>
-     <script type="text/javascript" src="assets/dist/combined-7df98be03c.js"></script>
+     <script type="text/javascript" src="assets/dist/combined-62d14e9927.js"></script>
      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.1/angular-sanitize.min.js"></script>
  </body>
  </html>
